apps/istio-ingress/overlays/ops/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  labels:
    app_label: istio-ingressgateway
    app.kubernetes.io/version: 1.18.0
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        name: https-deploykf
        number: 443
        protocol: HTTPS
      tls:
        mode: PASSTHROUGH
      hosts:
        - "k8s.deploykf.cluster.sciops.net"
    - hosts:
        - "*.cluster.sciops.net"
        - "cluster.sciops.net"
        # - "*.hostname.net"
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - port:
        name: https-sciops
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: cluster.sciops.net # This should match the Certificate secretName
      hosts:
        - "*.cluster.sciops.net" # This should match a DNS name in the Certificate
        - "cluster.sciops.net"
    # - port:
    #     name: https-hostname
    #     number: 443
    #     protocol: HTTPS
    #   tls:
    #     mode: SIMPLE
    #     credentialName: hostname.net # This should match the Certificate secretName
    #   hosts:
    #     - "*.hostname.net" # This should match a DNS name in the Certificate
