apps/istio-ingress/overlays/ops/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: auth-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  action: ALLOW
  rules:
    - to:
        - operation:
            hosts:
              # - "*.cluster.sciops.net"
              - "prometheus.cluster.sciops.net"
              - "kiali.cluster.sciops.net"
              - "jaeger.cluster.sciops.net"
              - "dex.cluster.sciops.net"
              - "argocd.cluster.sciops.net"
              - "grafana.cluster.sciops.net"
              - "cluster.sciops.net"
      when:
        - key: request.headers[x-envoy-external-address]
          values:
            - "146.115.69.127"
    - to:
        - operation:
            hosts:
              - "cluster.sciops.net" # homepage
              - "dex.cluster.sciops.net" # dex
              - "argocd.cluster.sciops.net" # github repository badge
              # - "grafana.cluster.sciops.net" # grafana
              # - "sonar.cluster.sciops.net" # github pipelines
